# acapy-plugins

./: .gitignore  CNAME  CONTRIBUTING.md  DOCSITE.md  Dockerfile  MAINTAINERS.md  README.md  RELEASES.md  archived_plugins.md  lite_plugins  ls_dep_libs.py  mkdocs-requirements.txt  plugins.json  pyproject.toml  repo-manager.py  repo_manager.py  setupDocs.sh  update_all_lock_files.sh
basicmessage_storage/integration/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml
cache_redis/: .gitignore  README.md  docker-compose.cluster.yml  docker-compose.yml  nginx.conf.template  pyproject.toml  redis.conf
cache_redis/.devcontainer/: devcontainer.json
cache_redis/docker/: Dockerfile  default.yml  default_cluster.yml
cache_redis/int/: Dockerfile  docker-compose.yml  pyproject.toml
cache_redis/integration/: Dockerfile  Dockerfile.test.runner  docker-compose.yml  init-network.sh  pyproject.toml
cheqd/: README.md  pyproject.toml
cheqd/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
cheqd/cheqd/: __init__.py  routes.py  validation.py
cheqd/docker/: Dockerfile  default.yml  docker-compose.yml  integration.yml  plugin-config-integration.yml  plugin-config.yml  provision.yml
cheqd/integration/: Dockerfile  Dockerfile.test.runner  README.md  docker-compose.yml  example.py  old_pyproject.toml  pyproject.toml  run_integration_tests.sh
connection_update/: README.md  plugin-config.yml.sample  pyproject.toml  setup.cfg  setup.py
connection_update/.devcontainer/: Dockerfile  devcontainer.json
connection_update/docker/: Dockerfile  default.yml  integration.yml
connection_update/integration/: docker-compose.yml  pyproject.toml
did-indy/: .dockerignore  Dockerfile  Dockerfile.server  README.md  pyproject.toml
did-indy/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
did-indy/demo/: Dockerfile  demo.ledgers.toml  demo.py  docker-compose.yml  entrypoint.sh
did-indy/integration/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
did-indy/interop/: docker-compose.yml
did-indy/tests/: test_indy_resolver.py
firebase_push_notifications/integration/: Dockerfile.test.runner  pyproject.toml
hedera/integration/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml
kafka-events/: .gitignore  KafkaEvents.md  README.md  __init__.py  aio_consumer.py  events.md  example-config.yml  pyproject.toml
kafka-events/deliverer/: Dockerfile  pyproject.toml
kafka-events/demo/: agent-tunnel-wait.sh  docker-compose.relay.yml  docker-compose.yml
kafka-events/docker/: Dockerfile  Dockerfile.test  README.md  default.yml  docker-compose.yml  plugins-config.yaml
kafka-events/http_kafka_queue_processor/: Dockerfile  __init__.py
kafka-events/http_kafka_relay/: Dockerfile
kafka-events/int/: Dockerfile.test.runner  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
kafka-events/kafka_events/: __init__.py  aio_consumer.py  aio_producer.py  kafka_producer.py  kafka_profile.py  routes.py  transformer.py
kafka-events/kafka_queue/: __init__.py  aio_consumer.py  aio_producer.py  config.py  confluenti_avro_producer.py  inbound.py  outbound.py  routes.py
kafka-events/tests/: test_aio_consumer.py  test_aio_producer.py  test_config.py  test_event_handler.py  test_routes.py  test_setup.py
kafka_events/: .gitignore  .pre-commit-config.yaml  README.md  events.md  example-config.yml  pyproject.toml  setup.py
kafka_events/.devcontainer/: devcontainer.json  post-install.sh
kafka_events/demo/: docker-compose.relay.yml  docker-compose.yml
kafka_events/docker/: Dockerfile  default.yml  docker-compose.yml  integration.yml  plugins-config.yaml
kafka_events/integration/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml
kafka_events/kafka_events/: definition.py
mso_mdoc/: README.md  pyproject.toml
mso_mdoc/.devcontainer/: devcontainer.json
mso_mdoc/docker/: Dockerfile  default.yml  integration.yml
mso_mdoc/integration/: docker-compose.yml  pyproject.toml
mso_mdoc/mso_mdoc/: __init__.py
multitenant_provider/: README.md  pyproject.toml  setup.py
multitenant_provider/.devcontainer/: Dockerfile  devcontainer.json
multitenant_provider/docker/: Dockerfile  default.yml  integration.yml
multitenant_provider/integration/: Dockerfile.test.runner  README.md  docker-compose.yml  pyproject.toml
new_plugin/integration/: docker-compose.yml  pyproject.toml
oid4vc/: .dockerignore  .gitignore  README.md  pyproject.toml
oid4vc/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
oid4vc/auth_server/: .gitignore  README.md  pyproject.toml
oid4vc/demo/: .env.example  .gitignore  README.md  create-mdoc-offer.sh  create-mdoc-offer.ts  create-mdoc-request.sh  create-mdoc-request.ts  docker-compose.yaml  docker-compose.yml  init.sql  mDL_IACA_Template.xca  nginx.conf  ngrok.yml  package-lock.json  package.json  presentation-flow.md  setup.sh  tsconfig.json
oid4vc/docker/: Dockerfile  default.yml  dev-verifier.yml  dev.yml  entrypoint.sh
oid4vc/integration/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test.runner  README.md  acapy_controller.py  docker-compose.conformance-only.yml  docker-compose.interop.yml  docker-compose.yml  example.env  pyproject.toml  run-conformance-tests.sh  run-demo.sh  run-tests.sh  run_acapy_credo_tests.sh  run_interop_tests.sh  run_tests.py
oid4vc/jwt_vc_json/: __init__.py  cred_processor.py  routes.py
oid4vc/mso_mdoc/: README.md  __init__.py  cred_processor.py  payload.py  routes.py  signing_key.py  trust_anchor.py  trust_anchor_routes.py  x509.py
oid4vc/oid4vc/: __init__.py  app_resources.py  config.py  cred_processor.py  dcql.py  did_utils.py  jwk.py  jwk_resolver.py  jwt.py  migrate.py  oid4vci_server.py  pex.py  pop_result.py  public_routes.py  routes.py  status_handler.py  upgrade.py  utils.py
oid4vc/sd_jwt_vc/: __init__.py  cred_processor.py  routes.py
oid4vci/: .pre-commit-config.yaml  README.md  pyproject.toml
oid4vci/.devcontainer/: Dockerfile  devcontainer.json
redis_events/: README.md  pyproject.toml  setup.py
(+1367 files in other folders)
