[project]
name = "acapy-plugins-bundle"
version = "1.4.0"
description = "ACA-Py plugins bundle with all available plugins"
authors = [
    {name = "PatStLouis", email = "patrick.st-louis@opsecid.ca"}
]
requires-python = ">=3.12"
dependencies = [
    "acapy-agent"
]

# Explicitly set no packages to avoid discovery issues
[tool.setuptools]
packages = []

[project.optional-dependencies]
plugins = [
    "acapy-plugin-basicmessage-storage @ file:///basicmessage_storage",
    "acapy-plugin-cache_redis @ file:///cache_redis",
    "acapy-plugin-cheqd @ file:///cheqd",
    "acapy-plugin-connection-update @ file:///connection_update",
    "acapy-plugin-connections @ file:///connections",
    "acapy-plugin-firebase-push-notifications @ file:///firebase_push_notifications",
    "acapy-plugin-hedera @ file:///hedera",
    "acapy-plugin-multitenant-provider @ file:///multitenant_provider",
    "acapy-plugin-oid4vc @ file:///oid4vc",
    "acapy-plugin-redis-events @ file:///redis_events",
    "acapy-plugin-rpc @ file:///rpc",
    "acapy-plugin-status-list @ file:///status_list",
    "acapy-plugin-webvh @ file:///webvh",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
