[tool.poetry]
name = "connection_update"
version = "0.1.0"
description = ""
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { version = "0.10.3" }

[tool.poetry.dev-dependencies]
ruff="^0.1.2"
black="23.7.0"

# testing
asynctest = "0.13.0"
pytest = "~7.4.0"
pytest-asyncio = "0.14.0"
pytest-cov= "2.10.1"
pytest-ruff="^0.1.1"
mock= "~4.0"

[tool.poetry.group.integration.dependencies]
# askar 
aries-askar= { version = "~0.2.5" }
indy-credx= { version = "~1.0.0" }
indy-vdr= { version = "~0.3.3" }

# bbs
ursa-bbs-signatures= { version = "~1.0.1" }

# indy
python3-indy= { version = "^1.11.1" }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "D417", "C901",
]

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "connection_update"
addopts = """
    -p no:warnings
    --quiet --junitxml=./test-reports/junit.xml
    --cov-config .coveragerc --cov=connection_update --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "docker/*",
    "integration/*",
    "*/definition.py"
]
data_file = "test-reports/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"