[tool.poetry]
name = "kafka_queue"
version = "0.1.0"
description = "ACA-Py Event to Kafka Bridge"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = "^0.7.4"
ecdsa = "^0.16.1"
aiokafka = "^0.7.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
asynctest = "0.13.0"
rope = "^0.19.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
