[tool.poetry]
name = "kafka_queue"
version = "0.1.0"
description = "ACA-Py Event to Kafka Bridge"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]

[tool.poetry.dependencies]
aiokafka = "^0.8.0"
ecdsa = "^0.16.1"
pydantic = "^1.8.2"
python = "^3.9"

# Define ACA-Py as an optional/extra dependancy so it can be
# explicitly installed with the plugin if desired.
aries-cloudagent = { version = "^0.9.0", optional = true }

[tool.poetry.extras]
aca-py = ["aries-cloudagent"]

[tool.poetry.dev-dependencies]
asynctest = "0.13.0"
black = "^22.3.0"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
pytest = "~7.4.0"
pytest-asyncio = "^0.15.1"
pytest-cov= "2.10.1"
pytest-mock = "^3.6.1"
pytest-ruff="^0.1.1"
rope = "^0.19.0"
ruff = "^0.1.2"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "D417", "C901",
]

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "kafka_events"
addopts = """
    -p no:warnings
    --quiet --junitxml=./test-reports/junit.xml
    --cov-config .coveragerc --cov=kafka_events --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "docker/*",
    "integration/*",
    "*/definition.py"
]
data_file = "test-reports/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract"
]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[build-system]
requires = ["setuptools", "poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
