[tool.poetry]
name = "oid4vc"
version = "0.1.0"
description = "OpenID for Verifiable Credentials plugin for acapy. (Supported acapy-agent version: 1.3.2) "
authors = [
    "Adam Burdett <burdettadam@gmail.com>",
    "Char Howland <char@indicio.tech>",
    "Daniel Bluhm <dbluhm@pm.me>",
    "Micah Peltier <micah@indicio.tech>",
    "Colton Wolkins <colton@indicio.tech>",
]
readme = "README.md"
packages = [
    { include = "oid4vc" },
    { include = "jwt_vc_json" },
    { include = "sd_jwt_vc" },
    { include = "mso_mdoc" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Define ACA-Py as an optional/extra dependency so it can be
# explicitly installed with the plugin if desired.
acapy-agent = { version = "~1.3.2", optional = true }

aiohttp = "^3.9.5"
aries-askar = "~0.4.3"
aiohttp-cors = "^0.7.0"
marshmallow = "^3.20.1"
jsonschema = "^4.23.0"
jsonpath = "^0.82.2"
cbor2 = { version = "~5", optional = true }
cbor-diag = { version = "*", optional = true }
cwt = { version = "~2", optional = true }
oscrypto = { git = "https://github.com/wbond/oscrypto.git", rev = "1547f53" }  # Resolves https://github.com/wbond/oscrypto/issues/78
pycose = { version = "~1", optional = true }
jsonpointer = { version = "^3.0.0", optional = true }

[tool.poetry.extras]
aca-py = ["acapy-agent"]
mso_mdoc = ["cbor2", "cbor-diag", "cwt", "pycose"]
sd_jwt_vc = ["jsonpointer"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
pytest-cov = "^5.0.0"
pytest-ruff = "^0.4.1"

[tool.poetry.group.integration.dependencies]
aries-askar = { version = "~0.4.3" }
indy-credx = { version = "~1.1.1" }
indy-vdr = { version = "~0.4.1" }
python3-indy = { version = "^1.11.1" }
anoncreds = { version = "0.2.0" }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
"**/{demo}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "oid4vc"
addopts = """
    -p no:warnings
    --quiet --junitxml=./.test-reports/junit.xml
    --cov-config .coveragerc --cov=oid4vc --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/tests/*", "docker/*", "integration/*", "*/definition.py"]
data_file = ".test-reports/.coverage"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = ".test-reports/coverage.xml"

[build-system]
requires = ["setuptools", "poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

