[tool.poetry]
name = "basicmessage_storage-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
pytest-asyncio = "~0.23.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

