[tool.poetry]
name = "plugin-globals-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
acapy-controller = {git = "https://github.com/indicio-tech/acapy-minimal-example.git", rev = "main"}
python = "^3.12"
pytest = "^8.2.2"
pytest-asyncio = "~0.23.7"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
