[tool.poetry]
name = "plugin-globals-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-asyncio = "~0.25.3"
requests = "^2.32.0"
acapy-controller = { git = "https://github.com/indicio-tech/acapy-minimal-example.git", rev = "main" }
pydantic = "^2.10.6"
typing-extensions = "^4.12.2"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

