[tool.poetry]
name = "plugin-globals-tests"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-asyncio = "~0.26.0"
requests = "^2.32.0"
acapy-controller = { git = "https://github.com/indicio-tech/acapy-minimal-example.git", rev = "main" }
pydantic = "^2.10.6"
typing-extensions = "^4.13.2"

[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

