[tool.poetry]
name = "connection_update-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
aries-cloudagent = { version = ">=0.10.3, < 1.0.0" }
asynctest = "^0.13.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
python = "^3.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

