[project]
name = "acapy-did-indy-interop"
version = "0.1.0"
description = "Interop testing utility"
readme = "README.md"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "pytest<9.0.0,>=8.2.2",
    "pytest-asyncio~=0.23.7",
    "acapy-controller @ git+https://github.com/indicio-tech/acapy-minimal-example.git ; python_version ~= \"3.10\"",
    "jsonrpc-api-proxy-client @ git+https://github.com/Indicio-tech/json-rpc-api-proxy.git@main#subdirectory=clients/python",
    "base58>=2.1.1",
    "pydantic>=2.9.1",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff<1.0.0,>=0.5.0",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
