[tool.poetry]
name = "plugin-globals-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-asyncio = "~0.25.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

