[tool.poetry]
name = "hedera-tests"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-anything = "^0.1.4"
pytest-asyncio = "~0.23.7"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

