[tool.poetry]
name = "acapy-resolver-didcomm-int-tests"
version = "0.1.0"
description = "Integration tests for ACA-Py DIDComm Resolver"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
asynctest = "0.13.0"
requests = "^2.25.1"
acapy-backchannel = {path="./acapy-backchannel", develop=true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
