[tool.poetry]
name = "acapy-kafka-queue-int-tests"
version = "0.1.0"
description = "Integration tests for ACA-Py kafka queue"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
pytest-asyncio = "~0.23.7"
requests = "^2.31.0"
pytest-cov = "^5.0.0"
acapy-client = {git="https://github.com/indicio-tech/acapy-client.git", branch="acapy/main"}
aiokafka = "^0.7.1"
echo-agent = {git = "https://github.com/indicio-tech/echo-agent.git", rev = "4cfaf5f7c88bcc3953fdb0b43885c028413a09dc", extras = ["client"]}

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

