[tool.poetry]
name = "multitenant_provider-tests"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
requests = "^2.32.0"
bcrypt = "^4.1.3"
mergedeep = "^1.3.4"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

