[tool.poetry]
name = "multitenant_provider-tests"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-asyncio = "^1.1.0"
requests = "^2.32.0"
bcrypt = "4.2.1"
mergedeep = "^1.3.4"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]

[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

