[tool.poetry]
name = "plugin-globals-tests"
version = ""
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
aries-cloudagent = { version = "0.10.3" }

[tool.poetry.dev-dependencies]
# linting

ruff="^0.0.285"
black="23.7.0"
# testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
asynctest = "^0.13.0"
requests = "^2.31.0"

[tool.poetry.group.integration.dependencies]
# askar 
aries-askar= { version = "~0.2.5" }
indy-credx= { version = "~1.0.0" }
indy-vdr= { version = "~0.3.3" }
# bbs
ursa-bbs-signatures= { version = "~1.0.1" }
# indy
python3-indy= { version = "^1.11.1" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"